# TaxSentry

./: .env.example  .gitignore  .npmignore  README.md  email_poller.py  eslint.config.js  main.py  package-lock.json  package.json  parser.py  pyproject.toml  requirements.txt  telegram_bot.py
.github/workflows/: cross-platform.yml
core/: analysis_engine.py  automation.py  excel_parser.py  pdf_parser.py
database/: db_manager.py
docs/: cross-platform-runtime-design.md  prepublish-checklist.md  worklog-2026-06-19.md
docs/release-notes/: 1.1.4-model-picker-ui.md
knowledge_base/: tax_rules_vietnam.md
npm/: LICENSE  README.md  package-lock.json  package.json  tsconfig.json  vite.config.ts  vitest.config.ts
npm/scripts/: prepack.mjs  smoke-install.mjs
npm/src/: cli.ts  runtime.ts
npm/tests/: runtime.test.ts
npm/ui/: index.html  tsconfig.json
npm/ui/src/: main.test.ts  main.ts  security.test.ts  security.ts  styles.css
scripts/: check-syntax.mjs  create_mock_report.py  create_payroll.py
src/: config.js  config.ts  installer.js  installer.ts  launcher.js  launcher.ts  onboarding.js  onboarding.ts
src/commands/: auth-codex.js  auth-codex.ts  bot.js  config.js  config.ts  dashboard.js  dashboard.ts  doctor.js  doctor.ts  jobs.js  jobs.ts  reconfigure.js  reconfigure.ts  replay.js  replay.ts  reset-profile.js  reset-profile.ts  service.js  service.ts  setup.js  setup.ts  start.js  start.ts  status.js  status.ts  stop.js  stop.ts  up.js  up.ts  update.js  update.ts
src/runtime/: entrypoints.js
src/taxsentry/: __init__.py  __main__.py  advisory.py  app.py  artifacts.py  chat_service.py  cockpit.py  config.py  control_server.py  events.py  extraction.py  gmail.py  knowledge.py  onboarding_service.py  providers.py  reporting.py  secrets.py  service_control.py  setup_wizard.py  store.py  telegram.py  text_normalize.py  tui.py  ui_text.py  updater.py  worker.py  workflow.py
src/taxsentry/bot/: telegram_bot.py
src/taxsentry/core/: excel_parser.py  pdf_generator.py
src/taxsentry/knowledge_base/: knowledge_sources.json  tax_rules_vietnam.md
src/taxsentry/web/static/: index.html
src/taxsentry/web/static/assets/: index-BOJXHfH0.css  (+2 more)
src/utils/: codex-auth.js  codex-auth.ts  helpers.ts  logger.js  logger.ts  paths.js  python-detector.js  python-detector.ts  service-artifacts.js  service-artifacts.ts  service-manager.js  service-manager.ts  terminal-theme.ts
stress_tests/: build_stress_fixtures.py  controlled_e2e.py  stress_financial_multisheet.xlsx  stress_hybrid_bilingual.xlsx  stress_payroll_formula_heavy.xlsx  stress_raw_single_sheet.xlsx
taxsentry-core/: .env.example  main.py  pyproject.toml  requirements.txt
taxsentry-core/core/: analysis_engine.py  email_poller.py  email_sender.py  excel_parser.py
taxsentry-core/database/: db_manager.py
taxsentry-core/src/taxsentry/: __init__.py  __main__.py  app.py  config.py  memory.py  providers.py  tui.py
taxsentry-core/src/taxsentry/agent/: __init__.py  kernel.py  planner.py  request.py  response.py  state.py  tool_registry.py
taxsentry-core/src/taxsentry/bot/: __init__.py  telegram_bot.py
taxsentry-core/src/taxsentry/config/: __init__.py  paths.py
taxsentry-core/src/taxsentry/core/: analysis_engine.py  automation.py  email_poller.py  email_sender.py  evidence_preview.py  excel_parser.py  pdf_generator.py  pdf_parser.py  workflow_service.py
taxsentry-core/src/taxsentry/database/: __init__.py  artifact_store.py  db_manager.py  memory_store.py  session_store.py
taxsentry-core/src/taxsentry/runtime/: __init__.py  composer.py  copilot_prompt.py  entrypoints.py  memory.py  policy.py  router.py  service.py  session.py
taxsentry-core/src/taxsentry/ui/: __init__.py  dashboard.py  dashboard_model.py  data_loader.py  hermes_shell.py  startup_context.py  theme.py  tui.py
taxsentry-core/src/taxsentry/utils/: __init__.py  runtime.py  test.py
taxsentry-core/tests/: test_agent_kernel.py  test_automation_session_store.py  test_copilot_prompt_memory.py  test_dashboard_runtime.py  test_dashboard_snapshot.py  test_excel_parser_regressions.py  test_memory_store.py  test_runtime_architecture.py  test_runtime_regressions.py  test_session_store.py
taxsentry-core/tests/snapshots/: dashboard_snapshot.json
taxsentry-core/utils/: path_helper.py
tests/: cli_surface_regressions.mjs  codex_oauth_regressions.mjs  package_smoke.mjs  privacy_runtime_regressions.mjs  service_apply_smoke.mjs  service_platform_matrix.mjs  test_advisory.py  test_artifacts.py  test_cli_commands.py  test_cockpit.py  test_config_gmail_store.py  test_control_server.py  test_extraction.py  test_knowledge.py  test_provider_contract.py  test_reliability.py  test_setup_wizard.py  test_updater.py  test_workflow.py  update_command_regressions.mjs
tests/fixtures/: advisory_cases.json
utils/: test_setup.py
