[build-system]
requires = ["setuptools>=75", "wheel"]
build-backend = "setuptools.build_meta"

[project]
name = "taxsentry-agent"
version = "2.0.11"
description = "Python-first AI agent for Vietnamese business and tax reporting workflows"
readme = "README.md"
requires-python = ">=3.11,<3.14"
license = "MIT"
authors = [{ name = "TaxSentry Team" }]
dependencies = [
  "keyring>=25.0", "openai>=1.0", "openpyxl>=3.1", "pdfplumber>=0.11",
  "pillow>=10.0", "pymupdf>=1.24", "pytesseract>=0.3.13",
  "python-docx>=1.1", "python-pptx>=1.0", "python-telegram-bot>=21.0",
  "reportlab>=4.0", "rich>=13.0", "textual>=8.2.8,<9",
]

[project.optional-dependencies]
dev = ["build>=1.2", "pytest>=8.0", "pytest-asyncio>=0.25", "ruff>=0.9"]

[project.scripts]
taxsentry = "taxsentry.tui:main"

[tool.setuptools.packages.find]
where = ["src"]

[tool.setuptools.package-data]
taxsentry = ["knowledge_base/*.md"]

[tool.pytest.ini_options]
testpaths = ["tests"]

[tool.ruff]
target-version = "py311"
line-length = 110

[tool.ruff.lint]
select = ["E", "F", "I"]
ignore = ["E501", "E701", "E702"]
