[build-system]
requires = ["setuptools>=61.0", "wheel"]
build-backend = "setuptools.build_meta"

[project]
name = "taxsentry-agent"
version = "0.1.0"
description = "On-premise AI Audit Agent - automated tax risk monitoring with 2-way Telegram control"
readme = "README.md"
requires-python = ">=3.10"
license = {text = "MIT"}
authors = [
    {name = "TaxSentry Team"}
]
keywords = ["ai-agent", "tax-audit", "finance", "accounting", "telegram-bot"]
classifiers = [
    "Development Status :: 3 - Alpha",
    "Environment :: Console",
    "Intended Audience :: Financial and Insurance Industry",
    "License :: OSI Approved :: MIT License",
    "Programming Language :: Python :: 3",
    "Programming Language :: Python :: 3.10",
    "Programming Language :: Python :: 3.11",
    "Programming Language :: Python :: 3.12",
]
dependencies = [
    "pandas>=2.0.0",
    "openpyxl>=3.1.0",
    "openai>=1.0.0",
    "python-telegram-bot>=20.0",
    "python-dotenv>=1.0.0",
    "rich>=13.0.0",
    "pdfplumber>=0.9.0",
    "reportlab>=4.0.0",
    "pymysql>=1.0.0",
]

[project.optional-dependencies]
dev = [
    "pytest>=7.0.0",
    "ruff>=0.1.0",
]

[project.scripts]
taxsentry-agent = "taxsentry.ui.tui:main"

[tool.setuptools.packages.find]
where = ["src"]

[tool.ruff]
target-version = "py310"
line-length = 100
